create redo and undo for drawed lines

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         alt="Goofy pic of me" /> -->
     <!-- <img class="hidden" id="goofyPic" src="image_sal4vg.jpg" alt="Goofy pic of me" /> -->
     <canvas id="canvas"></canvas>
-
+    <div class="lines-control">
+        <button id="undo">undo</button>
+        <button id="redo">redo</button>
+    </div>
     <div id="controls">
         <div class="lightBorder">
             <p style="display: none;"><label>Fill Color: <input id="fillColor" type="color" value="#24B0D5"></label></p>
